--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+fuse3 (3.4.2-2) unstable; urgency=medium
+
+  [ John Malmberg ]
+  * Patched Upstream Release for Ubuntu 19.04
+  * Experimental build for daos-stack project
+
+ -- John Malmberg <john.e.malmberg@intel.com>  Tue, 01 Oct 2019 21:09:00 +0000
+
 fuse3 (3.4.2-1) unstable; urgency=medium
 
   [ John Malmberg ]
